modify attributes for hovering and selecting buttons

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ button {
     display: flex;
     flex-direction: column;
     background-color: rgb(45, 182, 255);
-    border-radius: 8px;
     margin-top: 0;
     flex: 1 1 0%;
 }
@@ -30,27 +29,33 @@ h1 {
     color: rgb(255, 255, 255);
 }
 
-.size-btn {
-    border: none;
-    background-color: aliceblue;
-    color: rgb(45, 182, 255);
-    border-radius: 6px;
-}
-
-.size-btn:hover {
-    background-color: rgb(255, 255, 255);
-}
-
-.size-btn:disabled {
-    background-color: rgba(240, 248, 255, 0.585);
-}
-
 .sizing-btns {
     display: flex;
     justify-content: center;
     gap: 20px;
     align-items: center;
     margin: 5px;
+}
+
+.size-btn {
+    border: none;
+    background-color: rgb(255, 255, 255);
+    color: rgb(45, 182, 255);
+    border-radius: 6px;
+}
+
+.size-btn:enabled:hover {
+    background-color: rgb(255, 255, 255);
+    transform: scale(1.05);
+}
+
+.size-btn:disabled {
+    background-color: rgba(240, 248, 255, 0.585);
+}
+
+#selected {
+    background-color: rgb(255, 255, 255);
+    transform: scale(1.05);
 }
 
 .main-layout {
@@ -74,42 +79,36 @@ h1 {
     border-radius: 10px;
     border: white;
     border-style: solid;
+    border-width: 2px;
+}
+
+.color-btn:hover {
+    transform: scale(1.02);
+
+}
+
+.color-btn.selected {
+    transform: scale(1.15);
+    border: rgb(255, 247, 0);
+    border-style: solid;
     border-width: 4px;
 }
 
-
 #black {
     background-color: black;
-}
-
-#black:hover {
-    background-color: rgb(30, 30, 30);
 }
 
 #red {
     background-color: red;
 }
 
-#red:hover {
-    background-color: rgb(255, 61, 61);
-}
-
 #blue {
     background-color: blue;
-}
-
-#blue:hover {
-    background-color: rgb(58, 58, 255);
 }
 
 #green {
     background-color: green;
 }
-
-#green:hover {
-    background-color: rgb(0, 172, 0);
-}
-    
 
 .sketch-container {
     display: flex;
@@ -118,25 +117,6 @@ h1 {
     background-color: white;
     width: 640px;
     height: 640px;
-}
-
-.right-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.right-container button {
-    background-color: aquamarine;
-    color: Black;
-    margin:10px;
-    width: 120px;
-    height: 120px;
-    border-radius: 10px;
-    border: white;
-    border-style: solid;
-    border-width: 4px;
 }
 
 .item {
@@ -163,4 +143,27 @@ h1 {
 .item:hover {
     background-color: black;
     cursor:crosshair;
+}
+
+.right-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.right-container button {
+    background-color: aquamarine;
+    color: Black;
+    margin:10px;
+    width: 120px;
+    height: 120px;
+    border-radius: 10px;
+    border: white;
+    border-style: solid;
+    border-width: 4px;
+}
+
+.right-container button:hover {
+    transform: scale(1.02);
 }
